fix: hide overflowed

--- a/src/pages/Bmart/style.scss
+++ b/src/pages/Bmart/style.scss
@@ -1,16 +1,13 @@
 .bmart {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
-  .slide-pages {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .slide-pages-scroll-wrapper {
     width: 100%;
     height: 100%;
-    overflow-x: auto;
     white-space: nowrap;
-    scroll-snap-type: x mandatory;
+    overflow: visible;
 
     &::-webkit-scrollbar {
       display: none;
